--- a/index.html
+++ b/index.html
@@ -55,7 +55,36 @@
 
     <!-- Main -->
     <main>
-
+        <!-- About Mary -->
+        <section class="container about">
+            <div class="about-content">
+                <h2 class="section-title">About Me</h2>
+                <p class="text">
+                    I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
+                    slick websites that provide real value to the end user. Thousands of clients have procured
+                    exceptional resulfs while working with me. Delivering work within time and budget which meets
+                    clients requirements in our mata.
+                </p>
+                <div class="flex">
+                    <div>
+                        <h3 class="info-title">Name:</h3>
+                        <p class="info-text">Marry Hardy</p>
+                    </div>
+                    <div>
+                        <h3 class="info-title">Email:</h3>
+                        <p class="info-text">info@gmail.com</p>
+                    </div>
+                    <div>
+                        <h3 class="info-title">Date of birth:</h3>
+                        <p class="info-text">11 November 1987</p>
+                    </div>
+                    <div>
+                        <h3 class="info-title">From:</h3>
+                        <p class="info-text">Los Angeles, USA</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
