complete what i do section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,49 @@
                 </div>
             </div>
         </section>
+
+        <!-- What I Do -->
+         <section class="container what-i-do">
+            <h2 class="section-title">What I do</h2>
+            <p class="text what-i-do-text">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+            <!-- Cards -->
+             <div class="cards">
+                <!-- Card -1 -->
+                 <div class="card">
+                    <img src="/images/icons/js.png" alt="">
+                    <h3>Vanilla JavaScript</h3>
+                    <p class="small-text">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                 </div>
+                <!-- Card -2 -->
+                 <div class="card">
+                    <img src="/images/icons/react.png" alt="">
+                    <h3>React</h3>
+                    <p class="small-text">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                 </div>
+                <!-- Card -3 -->
+                 <div class="card">
+                    <img src="/images/icons/nodejs.png" alt="">
+                    <h3>Node.js</h3>
+                    <p class="small-text">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                 </div>
+                <!-- Card -4 -->
+                 <div class="card">
+                    <img src="/images/icons/mongo.png" alt="">
+                    <h3>MongoDB</h3>
+                    <p class="small-text">
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                 </div>
+             </div>
+         </section>
     </main>
 
     <!-- Footer -->
