--- a/index.html
+++ b/index.html
@@ -87,47 +87,124 @@
         </section>
 
         <!-- What I Do -->
-         <section class="container what-i-do">
+        <section class="container what-i-do">
             <h2 class="section-title">What I do</h2>
             <p class="text what-i-do-text">
-                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+                I have more than 10 years experience building software for clients all over the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience? Check out my online resume and project portfolio.
             </p>
             <!-- Cards -->
-             <div class="cards">
+            <div class="cards">
                 <!-- Card -1 -->
-                 <div class="card">
+                <div class="card">
                     <img src="/images/icons/js.png" alt="">
                     <h3>Vanilla JavaScript</h3>
                     <p class="small-text">
-                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.
                     </p>
-                 </div>
+                </div>
                 <!-- Card -2 -->
-                 <div class="card">
+                <div class="card">
                     <img src="/images/icons/react.png" alt="">
                     <h3>React</h3>
                     <p class="small-text">
-                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.
                     </p>
-                 </div>
+                </div>
                 <!-- Card -3 -->
-                 <div class="card">
+                <div class="card">
                     <img src="/images/icons/nodejs.png" alt="">
                     <h3>Node.js</h3>
                     <p class="small-text">
-                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.
                     </p>
-                 </div>
+                </div>
                 <!-- Card -4 -->
-                 <div class="card">
+                <div class="card">
                     <img src="/images/icons/mongo.png" alt="">
                     <h3>MongoDB</h3>
                     <p class="small-text">
-                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.
                     </p>
-                 </div>
-             </div>
-         </section>
+                </div>
+            </div>
+        </section>
+
+        <!-- Resume Section -->
+        <section class="container resume">
+            <h2 class="section-title">A summary of My Resume</h2>
+            <!-- Resume Content div -->
+            <div class="flex resume-content">
+                <!-- Left side -->
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <!-- Resume Box -1 -->
+                    <div class="resume-box">
+                        <h3>Master in Computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p class="small-text">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <!-- Resume Box -2 -->
+                    <div class="resume-box">
+                        <h3>Master in Computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p class="small-text">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <!-- Resume Box -3 -->
+                    <div class="resume-box">
+                        <h3>Master in Computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p class="small-text">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+                <!-- Right side -->
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <!-- Resume Box -1 -->
+                    <div class="resume-box">
+                        <h3>Sr. Font End Developer</h3>
+                        <h4>Apple Inc / 2020 - Current</h4>
+                        <p class="small-text">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <!-- Resume Box -2 -->
+                    <div class="resume-box">
+                        <h3>Jr. Font End Developer</h3>
+                        <h4>Dribbble Inc / 2018 - 2022</h4>
+                        <p class="small-text">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <!-- Resume Box -3 -->
+                    <div class="resume-box">
+                        <h3>HTML Developer</h3>
+                        <h4>Adobe Inc / 2017 - 2018</h4>
+                        <p class="small-text">
+                            List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <button class="primary-btn">Download CV</button>
+        </section>
     </main>
 
     <!-- Footer -->
