complete footer section

--- a/index.html
+++ b/index.html
@@ -208,8 +208,37 @@
     </main>
 
     <!-- Footer -->
-    <footer>
-
+    <footer class="bg-clr">
+        <section class="container">
+            <!-- Footer container div -->
+            <div class="flex footer-container">
+                <!-- Left side -->
+                <div class="column">
+                    <h2 class="footer-title">Lets Connect</h2>
+                    <p class="small-text footer-text">
+                        Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00
+                        P.M ET, Monday through Friday.
+                    </p>
+                    <!-- Icon div -->
+                    <div class="flex icon">
+                        <img src="/images/icons/facebook.png" alt="">
+                        <img src="/images/icons/twitter.png" alt="">
+                        <img src="/images/icons/insta.png" alt="">
+                    </div>
+                </div>
+                <!-- Right side -->
+                <div class="column">
+                    <h2 class="footer-title">Let’s Message me</h2>
+                    <!-- Form -->
+                     <form class="form">
+                        <input class="input" type="text" placeholder="Your name">
+                        <input class="input" type="email" placeholder="Your email">
+                        <textarea class="input" cols="30" rows="10" placeholder="Message"></textarea>
+                        <button class="primary-btn" type="submit">Submit</button>
+                     </form>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 
