--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
                         society
                         behaved moments.
                     </p>
-                    <button class="primary-btn">Download CV</button>
-                    <button class="primary-btn contact-btn primary-clr">Contact</button>
+                    <button class="primary-btn">
+                        <i class="fas fa-download"></i> Download CV
+                    </button>
+                    <button class="primary-btn contact-btn primary-clr">
+                        <i class="fas fa-phone-volume"></i> Contact
+                    </button>
                 </div>
                 <!-- Image Part -->
                 <div>
@@ -203,7 +207,9 @@
                     </div>
                 </div>
             </div>
-            <button class="primary-btn">Download CV</button>
+            <button class="primary-btn">
+                <i class="fas fa-download"></i> Download CV
+            </button>
         </section>
     </main>
 
@@ -230,16 +236,19 @@
                 <div class="column">
                     <h2 class="footer-title">Let’s Message me</h2>
                     <!-- Form -->
-                     <form class="form">
+                    <form class="form">
                         <input class="input" type="text" placeholder="Your name">
                         <input class="input" type="email" placeholder="Your email">
                         <textarea class="input" cols="30" rows="10" placeholder="Message"></textarea>
                         <button class="primary-btn" type="submit">Submit</button>
-                     </form>
+                    </form>
                 </div>
             </div>
         </section>
     </footer>
+
+    <!-- Js file -->
+    <script src="https://kit.fontawesome.com/06e9d3ab87.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
